--- a/EKS/helm/ingress.yaml
+++ b/EKS/helm/ingress.yaml
@@ -1,8 +1,8 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  namespace: robot-shop
-  name: robot-shop
+  namespace: robot-shop-1
+  name: robot-shop-1
   annotations:
     kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internet-facing
